<resources>
    <string name="app_name">aad-3-assg-1</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->


    <!-- Example settings for Notifications -->


    <!-- ************** Application-wide Strings ************* -->


    <!--<string name="element_text">Element</string>-->

    <string name="intro_message">
        <![CDATA[Assignment 1: This assignment introduces IntentService & BroadcastReceivers.
\nThis App downloads the most recent CNN YouTube listings and presents them to you below.]]>
    </string>
    <string name="toggle_log">Toggle Log</string>
    <string name="author">author</string>
    <string name="title">title</string>
    <string name="online">Toggle Online Testing</string>

</resources>
